--- a/app/src/main/res/layout/tao_hop_dong.xml
+++ b/app/src/main/res/layout/tao_hop_dong.xml
@@ -15,7 +15,41 @@
         android:textSize="36dp"
         android:textColor="@color/black"
         android:gravity="center"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16sp">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:text="Chọn tên khách thuê" />
+
+        <Spinner
+            android:id="@+id/spinner_tenKhach_HD"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16sp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:text="Chọn số phòng" />
+
+        <Spinner
+            android:id="@+id/spinner_soPhong_HD"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <EditText
         android:id="@+id/edt_NgayBatDau"
         android:layout_width="match_parent"
@@ -66,11 +100,11 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/btn_sua"
+            android:id="@+id/btn_themhoadon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorDividerView"
-            android:text="Sửa"
+            android:text="Thêm"
             android:textColor="@color/black"
             app:iconPadding="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -79,7 +113,7 @@
             app:layout_constraintVertical_bias="0.342" />
 
         <Button
-            android:id="@+id/btn_huy"
+            android:id="@+id/btn_huy_themHd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
