--- a/app/src/main/res/layout/activity_main_add_khach_thue.xml
+++ b/app/src/main/res/layout/activity_main_add_khach_thue.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="350dp"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:paddingBottom="20dp">
+    android:paddingBottom="20dp"
+    tools:context=".Main_Add_Khach_Thue">
 
     <TextView
         android:layout_width="match_parent"
@@ -17,8 +19,8 @@
         android:textColor="@android:color/black"
         android:textSize="25sp" />
 
-    <TextView
-        android:id="@+id/tv_SoPhong_ThemKhachThu"
+    <EditText
+        android:id="@+id/tv_SoPhong_ThemKhachThue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30dp"
@@ -28,7 +30,7 @@
 
 
     <EditText
-        android:id="@+id/edTenK"
+        android:id="@+id/edTenKT"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:inputType="textPersonName"
@@ -38,7 +40,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/bg_white_conor_10_border_gary"/>
     <EditText
-        android:id="@+id/edSd"
+        android:id="@+id/edSdt"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:inputType="textPersonName"
@@ -48,7 +50,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/bg_white_conor_10_border_gary"/>
     <EditText
-        android:id="@+id/edCcc"
+        android:id="@+id/edCccd"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:inputType="textPersonName"
@@ -64,7 +66,7 @@
         android:layout_marginTop="50dp">
         <Button
             android:layout_marginRight="10dp"
-            android:id="@+id/btnSav"
+            android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -75,7 +77,7 @@
 
         <Button
             android:layout_marginLeft="10dp"
-            android:id="@+id/btnCance"
+            android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
