--- a/app/src/main/res/layout/detail_khachthue.xml
+++ b/app/src/main/res/layout/detail_khachthue.xml
@@ -9,11 +9,12 @@
         android:id="@+id/txt_thongtinname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="108dp"
         android:text="Tên:Ngô Mạnh Dũng"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.433"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="118dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/thongtinsdt"
